<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvAuto"
        style="@style/TextViewBody"
        android:layout_gravity="right"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/orders_auto"
        android:textSize="13sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvOrderInfo"
        style="@style/TextViewBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="10dp"
        android:text="@string/goods_orders_info"
        android:textSize="13sp" />

    <View style="@style/lineSolid" />

    <LinearLayout
        android:id="@+id/llOperate"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvCourierInfo"
            style="@style/TextViewBody"
            android:layout_marginRight="5dp"
            android:text="@string/orders_sender_phone"
            android:textSize="11sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLeft"
            style="@style/BtnWhite"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/txtsize_caption"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnRight"
            style="@style/BtnWhite"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/txtsize_caption"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/bg_grey" />
</LinearLayout>